
    Corrected a bug where the coinduction stacks was not initialized when
    using the <</2 control construct.

    Corrected a bug that prevented using the coinductive/1 directive with a
    list of predicate indicators as argument.

    Corrected a bug in the implementation of the threaded_peek/1 built-in
    predicate when called from within categories.

    Updated the built-in debugger command that prints the execution context
    to also print the meta-call context and the coinduction stack.

    Changed the semantics of the coinductive/1 directive to use the same
    semantics as the coinductive1/1 directive found on the U.T.Dallas
    coinduction implementation. Thanks to Feliks Kluzniak for the examples
    that helped clarified the issues with the previous implementation. In
    addition, take advantage of the soft-cut control construct when supported
    by the back-end Prolog compiler for better performance.

    Refined error checking for the built-in predicates category_property/2,
    object_property/2, and protocol_property/2, throwing a type_error/2 when
    the second argument is neither a variable or a callable term. Added an
    info/1 entity property.

    When compiling a module as an object, warn instead of throwing an error
    when compiling a call to a built-in predicate used as a query.

    Attempting to load a settings file containing syntax errors will now
    print a warning instead of failing silently.

    Allow using a Prolog module as an hook object. The module must be loaded
    and its identifier must be different from any object identifier.

    Changed reporting of declared but not defined static predicates to exclude
    multifile predicates.

    Fixed a compilation performance issue with objects and categories
    containing a large number of clauses for the same predicate.

    Improved portability of calls from within objects and categories of calls